# Unity_Check

./: .coverage  .env  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEMO_GUIDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start_all.ps1
.claude/: settings.local.json
.memory/: MEMORY.md  architecture-risks.md  dev-plan-status.md  phase1-bugs-and-gaps.md
Docs/: 01-题目_技术栈_目标_规划.md  02-开发阶段规划_阶段验收标准.md  03-整体开发计划_修订版.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.js
frontend/src/api/: index.js
frontend/src/assets/: global.css
frontend/src/router/: index.js
frontend/src/views/: DashboardView.vue  EventDetailView.vue  EventListView.vue  StatsView.vue
roslyn-analyzer/: Dockerfile
roslyn-analyzer/UnityCheck.Analyzer/: Program.cs  UnityCheck.Analyzer.csproj
roslyn-analyzer/UnityCheck.Analyzer/AnalyzerLoading/: AnalyzerLoader.cs
roslyn-analyzer/UnityCheck.Analyzer/Endpoints/: AnalyzeEndpoints.cs
roslyn-analyzer/UnityCheck.Analyzer/Models/: AnalysisDiagnostic.cs  AnalyzeRequest.cs  AnalyzeResponse.cs
roslyn-analyzer/UnityCheck.Analyzer/Services/: RoslynAnalysisService.cs
scripts/: seed_demo_data.py  seed_demo_history.py
src/unity_check/: celery_app.py  config.py  db.py  git_service.py  llm.py  main.py  migration.py  models.py  notification_service.py  orchestrator.py  rule_service.py  tasks.py
tests/: conftest.py  test_config.py  test_git_service.py  test_integration_demo.py  test_llm_v2.py  test_orchestrator.py  test_rule_service.py  test_tasks.py  test_webhook.py
(+8 files in other folders)
