[project]
name = "unity-check"
version = "0.1.0"
description = "Unity code checking backend first-stage scaffold"
requires-python = ">=3.13,<3.14"
dependencies = [
  "celery>=5.4.0,<6",
  "fastapi>=0.115.0,<1",
  "openai>=1.76.0,<2",
  "psycopg[binary]>=3.2.0,<4",
  "pydantic-settings>=2.8.0,<3",
  "python-dotenv>=1.0.1,<2",
  "redis>=5.2.0,<6",
  "sqlalchemy>=2.0.39,<3",
  "uvicorn[standard]>=0.34.0,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.3.5,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
